--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -141,6 +141,15 @@ config DRM_PANEL_TIANMA_TL052VDXP02
 	  Say Y here if you want to enable support for the Tianma TL052VDXP02
 	  1920x1080 5.2" panel (found on the Motorola Moto G5 variants)
 
+config DRM_PANEL_TIANMA_TL057FVXP01
+	tristate "Tianma TL057FVXP01 panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for the Tianma TL057FVXP01
+	  2160x1080 5.7" panel (found on the Motorola Moto G6)
+
 config DRM_PANEL_TIANMA_622_V0
 	tristate "Tianma 6.22\" inch panel"
 	select DRM_PANEL_MIPI_DSI_COMMON
